# OpenVegasDeployed

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  TECHNICAL_SPEC.md  all-commands.md  cosmetics.md  demo.py  docker-compose.yml  dockerignore  enhancements-plan.md  env.production.example  final-touches.md  horsefix.md  install.sh  landing-page-inspo.md  landingpage-setup.md  migrate.sh  openvegas-beginners.md  openvegas-infra-play.md  pyproject.toml  railway.json  remotion-startup.md  seo_stuff  start.sh
.github/workflows/: ci.yml  npm-publish.yml  release.yml
cli/: package.json  tsconfig.json
cli/src/: index.tsx
jobs/: audit_idempotency.py  cleanup_horse_quotes.py  cleanup_mint_challenges.py  reconcile_grants.py  reconcile_ledger_orders.py  sweep_sessions.py
my-video/: package-lock.json  package.json
my-video/src/: Composition.tsx  HorseRace.tsx  Root.tsx
npm-cli/: README.md  openvegas-0.1.0.tgz  package.json
npm-cli/lib/: download.js
openvegas/: __init__.py  auth.py  capabilities.py  cli.py  client.py  compact_uuid.py  config.py  flags.py  qr_runtime.py  telemetry.py
openvegas/agent/: boost.py  local_tools.py  openclaw_skill.py  orchestration_contracts.py  orchestration_service.py  runtime_contracts.py  service.py  tool_cas.py  tool_stream.py
openvegas/casino/: baccarat.py  base.py  blackjack.py  constants.py  human_service.py  poker.py  roulette.py  service.py  slots.py
openvegas/contracts/: errors.py
openvegas/enterprise/: org_service.py
openvegas/fraud/: engine.py
openvegas/games/: base.py  horse_racing.py  skill_shot.py
openvegas/gateway/: catalog.py  inference.py
openvegas/ide/: __init__.py  bridge_registry.py  bridge_types.py  jetbrains_bridge.py  show_diff.py  vscode_bridge.py
openvegas/mint/: engine.py  tasks.py
openvegas/payments/: __init__.py  fake_gateway.py  service.py  stripe_gateway.py
openvegas/rng/: provably_fair.py
openvegas/store/: catalog.py  service.py
openvegas/tui/: cards.py  (+24 more)
scripts/: build-binary.sh  generate_dealer_sheet.py  migrate.sh  provision_dummy_users.py  sync-version.sh
server/: main.py
supabase/: seed.sql
tests/: conftest.py  test_client_network_errors.py
ui/: balance.html  call-to-action.html  checkout-cancel.html  checkout-pending.html  checkout-success.html  contact.html  docs.html  faq.html  horse2.html  how-it-works.html  how-to-play.html  index.html  index2.html  login.html  payments.html  pricing.html  product.html  profile.html  security.html  subscription.html  topup-checkout.html  topup.html  transactions.html
web/: package.json
(+225 files in other folders)
